# esp-idf-ableton-link

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README.tpl  build.rs  sdkconfig.defaults.documentation
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
components/ableton_link/: CMakeLists.txt
include/: link_wrapper.h
src/: bindings.h  lib.rs  link_wrapper.cpp  link_wrapper.h  session.rs  time.rs
