[package]
name = "esp-idf-ableton-link"
version = "0.1.0"
authors = ["DocWilco <github@drwil.co>"]
edition = "2021"
license = "GPL-2.0-or-later"
description = "Safe Rust wrapper for Ableton Link on ESP32 via ESP-IDF"
keywords = ["esp32", "esp-idf", "ableton", "link", "music"]
categories = ["embedded", "hardware-support"]

[dependencies]
esp-idf-sys = "0.36"
log = "0.4"

[features]
default = []
std = []

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
extra_components = [
    { remote_component = { name = "esp_ableton_link", version = "fe79e1fa5d80884748c59b75713ab6207d6484a1", git = "https://github.com/docwilco/esp_ableton_link.git" }, bindings_header = "src/bindings.h", bindings_module = "ableton_link" },
    { remote_component = { name = "espressif/asio", version = "*" } },
]
