[package]
name = "esp-idf-ableton-link"
version = "0.1.0+link.3.1.5"
edition = "2024"
rust-version = "1.88"
license = "GPL-2.0-or-later"
description = "Safe Rust wrapper for Ableton Link on ESP32 via ESP-IDF"
repository = "https://github.com/docwilco/esp-idf-ableton-link"
keywords = ["esp32", "esp-idf", "ableton", "link", "sync"]
categories = ["embedded", "network-programming"]

[dependencies]
esp-idf-sys = "0.36"
log = "0.4"

[features]
default = []
std = []

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
extra_components = [
    { remote_component = { name = "docwilco/esp_abl_link", version = "3.1.5" }, bindings_header = "src/bindings.h", bindings_module = "abl_link" },
]
